-added standard quantity of 0 for new items -fix: staying in editmode when there is missing input -fix: floating action button -fix: in editmode decreasing quantity with the button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,6 @@
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:background="@color/colorPrimary"
-        android:src="@drawable/clipboard_plus" />
+        android:src="@drawable/ic_add" />
 
 </RelativeLayout>
