--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -33,7 +33,7 @@
 
             <TextView
                 android:id="@+id/quantity"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceSmall" />
 
